# cmb-augr

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: test.yml
augr/: __init__.py  _chi2alpha.py  _qe.py  active_subspace.py  allocation.py  bandpass.py  bandpower_windows.py  cleaning.py  cmilc.py  compsep_sims.py  config.py  cost.py  covariance.py  crosslinks.py  crosslinks_southpole.py  delensing.py  design_opt.py  design_packing.py  eig.py  fisher.py  forecast.py  foregrounds.py  gnilc.py  hit_maps.py  instrument.py  masking.py  multipatch.py  nilc.py  nilc_forecast.py  noise_sims.py  optimize.py  optimize_mapbased.py  parallel.py  pipeline.py  sbc.py  sht.py  signal.py  sky_patches.py  spectra.py  spectrum_stages.py  (+4 more)
augr/likelihood/: __init__.py  from_cutsky.py  gaussian.py  hl.py  mc_calibrated.py  mle.py  nuts.py  ordering.py  posterior.py  prior.py  profile.py  protocols.py
data/: n0_reference_litebird.npz
data/falcons_validation/: metadata.txt  metadata_planck.txt
notebooks/: quickstart.ipynb
scripts/: active_subspace_hl_eig.py  broom_residual_template.py  build_sky_cache.py  cmilc_diagnostics.py  cutsky_headline.py  cutsky_hl_headline.py  eig_design_demo.py  generate_camb_templates.py  gnilc_diagnostics.py  make_hit_maps.py  mapbased_grad_characterization.py  masking_diagnostics.py  nilc_diagnostics.py  plot_cutsky_hl_demo.py  plot_figure5.py  sample_sigma_r.py  validate_bk.py  validate_carones.py  validate_hl_coverage.py  validate_hl_coverage_mc.py  validate_pico.py  vista_cpu_subspace.slurm
scripts/falcons_validation/: Manifest.toml  Project.toml  README.md  compare_hk_to_envelope.py  compare_yearavg.py  derivation_and_lit_search.md  mc_truth.py  plot_hitmaps.py  validate_hk.jl  validate_hk_planck.jl
scripts/fisher_numerics/: diag_gradient.py  diag_jit_drift.py
scripts/n0_validation/: README.md  compare.py  controlled_input_test.py  derivation.md  diagnose_fullsky_L2.py  inspect_npz.py  run_plancklens.py
scripts/southpole_derivation/: 01_geometry.md  01_geometry_diagram.py  02_offaxis_map.md  02_offaxis_map.py  03_validation.md  03_validation.py
tests/: conftest.py  test_active_subspace.py  test_allocation.py  test_bandpass.py  test_bandpower_windows.py  test_chi2alpha.py  test_cleaning.py  test_cmilc.py  test_compsep_sims.py  test_config.py  test_cost.py  test_covariance.py  test_crosslinks.py  test_crosslinks_southpole.py  test_delensing.py  test_design_opt.py  test_design_packing.py  test_eig.py  test_fisher.py  test_fisher_stability.py  test_foregrounds.py  test_gnilc.py  test_hit_maps.py  test_hl_eig.py  test_instrument.py  test_likelihood_from_cutsky.py  test_likelihood_hl.py  test_likelihood_mle.py  test_likelihood_ordering.py  test_likelihood_posterior.py  test_likelihood_profile.py  test_likelihood_sampler.py  test_masking.py  test_multipatch.py  test_nilc.py  test_nilc_forecast.py  test_noise_sims.py  test_noise_sims_correlated.py  test_optimize.py  test_optimize_mapbased.py  (+13 more)
