[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmb-augr"
version = "0.1.0"
description = "Fisher-matrix forecasting for CMB B-mode polarization experiments"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "Jamie Cheshire", email = "cheshire@caltech.edu" },
]
keywords = ["CMB", "cosmology", "Fisher", "forecasting", "B-modes", "JAX", "delensing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/jrcheshire/cmb-augr"
Repository = "https://github.com/jrcheshire/cmb-augr"
Issues = "https://github.com/jrcheshire/cmb-augr/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
camb = ["camb"]
notebooks = ["jupyterlab", "ipykernel", "matplotlib"]

[tool.setuptools.packages.find]
include = ["augr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
