[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmb-augr"
version = "0.1.0"
description = "Fisher-matrix forecasting for CMB B-mode polarization experiments"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "James Cheshire", email = "cheshire@caltech.edu" },
]
keywords = ["CMB", "cosmology", "Fisher", "forecasting", "B-modes", "JAX", "delensing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "healpy>=1.16",
]

[project.urls]
Homepage = "https://github.com/jrcheshire/cmb-augr"
Repository = "https://github.com/jrcheshire/cmb-augr"
Issues = "https://github.com/jrcheshire/cmb-augr/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pywigxjpf"]
camb = ["camb"]
broom = ["cmbroom", "pyyaml"]
notebooks = ["jupyterlab", "ipykernel", "matplotlib"]

[tool.setuptools.packages.find]
include = ["augr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that take O(minutes) — full-sky Wigner 3j delensing iterations and 200k-sample Monte Carlo crosschecks. Excluded from default CI; run with `pytest -m slow` or unfiltered.",
]

# ---------------------------------------------------------------------------
# pixi
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.12"
numpy = ">=1.24"
scipy = ">=1.10"
matplotlib = ">=3.7"
healpy = ">=1.16"
pytest = ">=7.0"
pytest-xdist = ">=3.0"
camb = "*"
jupyterlab = "*"
ipykernel = "*"
ipython = "*"
ruff = "*"

[tool.pixi.pypi-dependencies]
jax = ">=0.4"
jaxlib = ">=0.4"
pywigxjpf = "*"
cmbroom = "*"
pyyaml = "*"
cmb-augr = { path = ".", editable = true }

[tool.pixi.tasks]
test = { cmd = "pytest tests/ -m 'not slow' -n auto", env = { AUGR_DELENS_WORKERS = "1" } }
test-slow = "pytest tests/ -v -m slow"
test-all = { depends-on = ["test", "test-slow"] }
validate-pico = "python scripts/validate_pico.py"
validate-bk = "python scripts/validate_bk.py"
nb = "jupyter lab notebooks/"
ipy = "ipython"
lint = "ruff check augr/ tests/ scripts/"
format = "ruff format augr/ tests/ scripts/"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF", "NPY", "PD", "SIM"]
# Allow non-snake_case variable names: physics code is unavoidably full of
# Q, U, T, Cl, A_dust, T_dust, etc. -- single-letter or capital-letter
# identifiers don't reflect Python style guidelines. Long lines are
# tolerated in equation-heavy comments and docstrings. RUF001/002/003
# would flag every Greek letter in the package as "ambiguous" (e.g.
# ν, η, σ, ℓ, μK) -- we use Greek throughout for physics symbols by
# design, so disable the family wholesale.
ignore = [
    "E501",
    "N801", "N802", "N803", "N806",
    "RUF001", "RUF002", "RUF003",
]
