[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmb-augr"
version = "0.1.0"
description = "Fisher-matrix forecasting for CMB B-mode polarization experiments"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-3-Clause" }
authors = [
    { name = "James Cheshire", email = "cheshire@caltech.edu" },
]
keywords = ["CMB", "cosmology", "Fisher", "forecasting", "B-modes", "JAX", "delensing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "healpy>=1.16",
    "equinox>=0.11",
]

[project.urls]
Homepage = "https://github.com/jrcheshire/cmb-augr"
Repository = "https://github.com/jrcheshire/cmb-augr"
Issues = "https://github.com/jrcheshire/cmb-augr/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pywigxjpf"]
camb = ["camb"]
broom = ["cmbroom", "pyyaml"]
compsep = ["ducc0", "pysm3"]
sampling = ["blackjax", "optax"]
masking = ["jaxht>=0.2.0"]
notebooks = ["jupyterlab", "ipykernel", "matplotlib"]

[tool.setuptools.packages.find]
include = ["augr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Dump all-thread tracebacks if any test runs > this many seconds (catches a hung
# test's C-level stack even when the GIL is held in a network/IO wait). Set below the
# `test` task's --timeout so the stack is printed first, then the pytest-timeout thread
# method hard-kills the worker. Generous vs the slowest gate test (~10s local / ~45s on
# the 2-core CI runner) so only genuine hangs trip it, never a legitimately heavy test.
faulthandler_timeout = 150
markers = [
    "slow: heavy tests excluded from the per-PR gate, run serially in the weekly/local suite — full-sky Wigner 3j delensing iterations, 200k-sample Monte Carlo crosschecks, and PySM-foreground compsep sims. The PySM tests download sky templates over the network on a cold cache, which must NOT happen under the parallel CI runner (concurrent cold downloads hang the worker); keep any `fg_model != None` test marked. Run with `pytest -m slow` or unfiltered.",
]

# ---------------------------------------------------------------------------
# pixi
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "linux-aarch64"]

# The full dev/CI dependency set lives in a `host` feature pinned to the platforms
# whose niche compiled deps (namaster, camb, ducc0, pysm3, cmbroom, pywigxjpf) have
# binaries -- so the default environment does NOT try (and fail) to solve aarch64.
# The aarch64 GPU env (below) uses only the slim `gpu` feature.
[tool.pixi.feature.host]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.feature.host.dependencies]
python = ">=3.12"
numpy = ">=1.24"
scipy = ">=1.10"
matplotlib = ">=3.7"
healpy = ">=1.16"
pytest = ">=7.0"
pytest-xdist = ">=3.0"
camb = "*"
ducc0 = "*"
pysm3 = "*"
jupyterlab = "*"
ipykernel = "*"
ipython = "*"
ruff = "*"
pytest-timeout = ">=2.1"
# NaMaster (conda-forge) — non-differentiable; used only as a gated cross-check
# in the masked-Wiener validation suite (tests importorskip it). Conda-only:
# the PyPI `pymaster` builds from source against gsl/fftw/cfitsio, so it is
# deliberately NOT exposed as a pip extra.
namaster = "*"

[tool.pixi.feature.host.pypi-dependencies]
jax = ">=0.4"
jaxlib = ">=0.4"
equinox = ">=0.11"
blackjax = "*"
optax = "*"
jaxht = ">=0.2.0"
pywigxjpf = "*"
cmbroom = "*"
pyyaml = "*"
cmb-augr = { path = ".", editable = true }

# GPU environment for ARM CUDA clusters (TACC Vista `gh` / GH200, H200). A minimal
# feature -- NOT the full default env -- because the GPU path uses the jht JAX-native SHT
# and the map-based CMB-only forecasts need no ducc0/pysm3. (The genuinely aarch64-hard
# deps -- camb, namaster, cmbroom, pywigxjpf -- stay off all aarch64 features.) jax comes
# from PyPI so GPU is just the `cuda12` extra (aarch64 wheels exist). Use it with
# `pixi run -e gpu python scripts/mapbased_grad_characterization.py --mode ladder ...`.
[tool.pixi.feature.gpu]
platforms = ["linux-aarch64"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12"

[tool.pixi.feature.gpu.dependencies]
python = ">=3.12"
numpy = ">=1.24"
scipy = ">=1.10"
matplotlib = ">=3.7"
healpy = ">=1.16"

[tool.pixi.feature.gpu.pypi-dependencies]
jax = { version = ">=0.4", extras = ["cuda12"] }
jaxht = ">=0.2.0"
equinox = ">=0.11"
cmb-augr = { path = ".", editable = true }

# CPU environment for the GPU-less Grace-Grace Vista nodes (aarch64, ~144 cores/node).
# Unlike `gpu`, this carries ducc0 + pysm3: conda-forge DOES ship linux-aarch64 builds for
# them (verified -- ducc0 0.41.0 / pysm3 / healpy import on Grace via `pixi exec`), so PySM
# FG generation runs inline and the needlet-cleaner SHTs go through the opaque ducc
# custom_call (`--backend ducc`). The masked-Wiener stage stays jht regardless of backend
# (masking.py calls jht.wiener / jht.bandpower directly), so compiling at nside>=64 relies
# on jaxht>=0.2.0's looped azimuth-FFT mode (the driver sets it; --fft-mode) -- unrolled
# per-ring kernels made the graph multi-GB (~42 min compile / 12 GB measured on Grace).
# The aarch64-hard deps (camb, namaster, cmbroom, pywigxjpf) are not needed by the map-based
# forecast / active-subspace driver, so they stay off. Use it with
# `pixi run -e cpu python scripts/active_subspace_hl_eig.py --backend ducc --workers N ...`.
[tool.pixi.feature.cpu]
platforms = ["linux-aarch64"]

[tool.pixi.feature.cpu.dependencies]
python = ">=3.12"
numpy = ">=1.24"
scipy = ">=1.10"
matplotlib = ">=3.7"
healpy = ">=1.16"
ducc0 = "*"
pysm3 = "*"

[tool.pixi.feature.cpu.pypi-dependencies]
jax = ">=0.4"
jaxlib = ">=0.4"
equinox = ">=0.11"
jaxht = ">=0.2.0"
cmb-augr = { path = ".", editable = true }

[tool.pixi.environments]
default = { features = ["host"] }
gpu = { features = ["gpu"], no-default-feature = true }
cpu = { features = ["cpu"], no-default-feature = true }

[tool.pixi.tasks]
test = { cmd = "pytest tests/ -m 'not slow' -n auto --maxprocesses=8 --timeout=180 --timeout-method=thread --max-worker-restart=0 -ra", env = { AUGR_DELENS_WORKERS = "1", AUGR_SHT_NTHREADS = "1", OMP_NUM_THREADS = "1", OPENBLAS_NUM_THREADS = "1", MKL_NUM_THREADS = "1" } }
test-slow = "pytest tests/ -v -m slow"
test-all = { depends-on = ["test", "test-slow"] }
validate-pico = "python scripts/validate_pico.py"
validate-bk = "python scripts/validate_bk.py"
nb = "jupyter lab notebooks/"
ipy = "ipython"
lint = "ruff check augr/ tests/ scripts/"
format = "ruff format augr/ tests/ scripts/"

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF", "NPY", "PD", "SIM"]
# Allow non-snake_case variable names: physics code is unavoidably full of
# Q, U, T, Cl, A_dust, T_dust, etc. -- single-letter or capital-letter
# identifiers don't reflect Python style guidelines. Long lines are
# tolerated in equation-heavy comments and docstrings. RUF001/002/003
# would flag every Greek letter in the package as "ambiguous" (e.g.
# ν, η, σ, ℓ, μK) -- we use Greek throughout for physics symbols by
# design, so disable the family wholesale.
ignore = [
    "E501",
    "N801", "N802", "N803", "N806", "N815",
    "RUF001", "RUF002", "RUF003",
]
